--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,92 +3,75 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <script src="https://kit.fontawesome.com/0b5751010d.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <title>Portfolio</title>
+  <!-- CSS only -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <span class="hamburger-icon" onclick="toggleMenu();">
-      <i id="t1" class="fas fa-bars"></i>
-      <i id="t2" class="fas fa-times"></i>
-    </span>
-    <span class="logo">Loststyles</span>
-    <nav id="navbar">
-      <ul>
-        <li>
-          <a href='#' id="link1">Home</a>
+  <nav class="navbar navbar-expand-lg">
+    <a class="navbar-brand" href="#">LOSTSTYLES</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li>
-          <a href='#' id="link2">Portfolio</a>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
         </li>
-        <li>
-          <a href='#' id="link3">About Me</a>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Support</a>
         </li>
-        <li>
-          <a href='#' id="link4">Contact</a>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Help</a>
         </li>
       </ul>
-    </nav>
-  </header>
+    </div>
+  </nav>
 
-  <main>
-    <span class="rect"></span>
-    <span class="ellipse"></span>
-    <div class="container-fluid" id="banner">
-      <div class="row">
-        <div class="col-sm-10">
-          <div class="card">
-            <span class="user-pic">
-              <i class="fas fa-user"></i>
-            </span>
-            <div class="card-body">
-              <h3 class="card-title">Hello,</h3>
-              <p class="card-text">Welcome to LostStyles. I like to design digital pages that are pixel perfect. I love building easy, immaculate websites and user interface that are easy to use and satisfying to look at. I specialize in producing user-engaging experience designs. If you loved my work posted on portfolio section and want your website to look cool as that, feel free to drop me a mail. Please do checkout my blog to follow new trends in web design.</p>
-            </div>
-          </div>
-        </div>
+  <div class="container-fluid" id="banner">
+    <div class="row">
+      <div class="col-sm-12">
+        <h1 class="h1">Hey,</h1>
+        <p class="lead">I'm Shubham and I'm 23 years old FREELANCE WEB DESIGNER. I design attractive, highly user engaging web pages. I love to style the pixels and spend most of my time designing and building web pages. This website is basically my portfolio that showcases the work I completed. I have created it to demonstrate my abilities and, as well as to get reviews from different eye's. Please spare your minute and let me know your view. If you want your website to look as cool as one in my protfolio, please feel free to contact me. To know more about me please check out my LinkedIn profile.</p>
       </div>
     </div>
-  </main>
+  </div>
 
-  
-  <script>
-      var counter = 2;
-      function toggleMenu(){
-        if(counter % 2 == 0){
-          document.getElementById('t1').style.display="none";
-          document.getElementById('banner').style.left="30vw"
-          document.getElementById('banner').style.width="70vw"
-          document.getElementById('navbar').style.width="30vw";
-          document.getElementById('link1').style.display="block";
-          document.getElementById('link2').style.display="block";
-          document.getElementById('link3').style.display="block";
-          document.getElementById('link4').style.display="block";
-          document.getElementById('t2').style.textShadow='0px 20px 40px #FCE7ED';
-          document.getElementById('t2').style.display="block";   
-          counter++;
-          console.log('in if');
-        }
-        else{
-          document.getElementById('t2').style.display="none";
-          document.getElementById('navbar').style.width="0vw";
-          document.getElementById('link1').style.display="none";
-          document.getElementById('link2').style.display="none";
-          document.getElementById('link3').style.display="none";
-          document.getElementById('link4').style.display="none";
-          document.getElementById('banner').style.left="0vw"
-          document.getElementById('banner').style.width="100vw"
-          document.getElementById('t1').style.display="block";   
-          counter++;
+  <div class="water-mark">
+    <h2>loststyles</h2>
+  </div>
+    
+  <div class="container-fluid" id="contact-form">
+    <div class="row">
+      <div class="col-md-6">
+        <form class="form">
+          <div class="form-group">
+              <label for="email">Email ID:</label>
+            <input type="email" name="email" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="message">Message:</label>
+            <textarea name="" id="" cols="30" rows="10" class="form-control"></textarea>
+          </div>
+          <button class="btn">Submit</button>
+        </form>
+      </div>
+      <div class="col-md-6">
+        <h3>Contact Me</h3>
+        <hr>
+        <p class="lead">Please specify your email id and drop me a message, if you want to create a stunning website like the one you are currently browsing. I'll reply back to you. Don't worry, neither I'll flood your inbox with spam messages nor I'll share your contact details with anyone.</p>
+      </div>
+    </div>
+  </div>
 
-        }
-
-      }
-  </script>
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <!-- JS, Popper.js, and jQuery -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
